--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "mongoose": "^6.8.0",
+    "puppeteer": "^19.4.1",
     "redis": "^4.5.1"
   }
 }
