--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+    "minio": "^7.0.32",
     "mongoose": "^6.8.0",
     "puppeteer": "^19.4.1",
     "redis": "^4.5.1"
